Simple metadata for embedding link

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Conker's Bad Fur Day Decompilation"
-    />
+    <meta name="theme-color" content="#f0f018" />
+
+    <meta property="og:title" content="Conker&apos;s Bad Fur Day Decomp" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://conker.deco.mp" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/00007F5A.bin.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
